fix: update line-height property in body for improved text readability

--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ body{
 
     color: white;
 
-    line-height: 1.0;
+    line-height: 1.3;
 
 
     word-break: break-word;
